2017-02-21  Barton E. Schaefer  <schaefer@zsh.org>

	* Julien Nicoulaud: 40586:
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git: discard stderr

2017-02-20  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Test/ztst.zsh: use "diff -a" in case special characters
	were written to the test output

	* 40598: Src/subst.c: paramsubst() should always return scalar
	when PREFORK_SINGLE was passed in from prefork()

	* Martijn Dekker: 40565 (tweaked): test cases for assigning array
	to scalar with various combinations of SHWORDSPLIT and IFS

2017-02-19  Barton E. Schaefer  <schaefer@zsh.org>

	* 40593: Src/subst.c: SHWORDSPLIT + unset IFS should cause default
	splitting of $@ and other array references with (@) or [@]

	* 40576 (tweaked): Src/exec.c: entersubsh(): small improvement to
	loop that resets trap handlers; unblock any signals that were
	blocked for trap handling

2017-02-19  Oliver Kiddle  <opk@zsh.org>

	* 40569: Completion/Unix/Command/_gphoto2: update to gphoto2 2.5.11

2017-02-17  Peter Stephenson  <p.stephenson@samsung.com>

	*  Øystein Walle: 40568: REMATCH_PCRE option is not enabled by
	default.

	* Sebastian: 40558, 40562: Doc/Zsh/mod_db_gdbm.yo,
	Src/Modules/db_gdbm.c, Src/Modules/db_gdbm.mdd: General
	improvements to zsh/db/gdbm module.

2017-02-13  Barton E. Schaefer  <schaefer@zsh.org>

	* 40539: Fabian Klotzl: Completion/Unix/Command/_gcc: typo in MIPS
	branch of argument selection

	* 40524: Src/Modules/example.c: do not free a null array

2017-02-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 40537: Doc/Zsh/builtins.yo: document the foregoing.

	* Sebastian: 40536: Src/builtin.c, Src/zsh.h: prepend directory
	of function autoload with absolute path to fpath if loading a
	function by relative path.

2017-02-10  Oliver Kiddle  <opk@zsh.org>

	* 40512: Completion/Unix/Command/_entr: new entr completion

	* unposted: Completion/Linux/Command/_lsusb: using a colon in
	the tag name was not such a good idea
